findcenter and truist

--- a/projects/workshop/est-projects/truist-olb/truist-olb.component.html
+++ b/projects/workshop/est-projects/truist-olb/truist-olb.component.html
@@ -18,9 +18,19 @@
     When BB&amp;T and SunTrust merged to form Truist, I remained on the retail team as a front-end developer. It was fun to work with such knowledgable people in a fast driven environment. Let's take a look at some of the application that I helped to develop.
   </p>
 
-  <img src="/assets/images/oldScreenshot.jpeg" alt="truist online banking" class="max-img" />
+  <img src="/assets/images/olbScreenshot.jpeg" alt="truist online banking" class="max-img" />
 
   <p>
-    The numbers are changed because this is now a live site. Our web application was developed in the JavaScript framework, Angular. I personally enjoyed learning Angular because it allowed me to use it moving forward in future projects...like this website! Creating components and working with a design system was amazing. The structure of the enterprise was we had a design systems team who create enterprise wide components and patterns. The next level, which is the level I was on, Retail, was the areas of focus teams. We incorporated the design system into our project and if we created a component that other teams needed, we could push the component into the design system where it would be tested and absorbed by the DS.
+    When I was hired by BB&T, I had no idea that we would merge with SunTrust to become Truist. We merged a year and a half into my tenure with BB&T. Once we merged, it was an exciting time and gave everyone a lot of opportunities to grow and try something new at the company. I decided to step more into a front-end developer role and help lead the retail web team in developing the retail web platform. It was fun to work with such knowledgable people in a fast driven environment. Let's take a look at some of the application that I helped to develop. The numbers are changed because this is now a live site. Our web application was developed in the JavaScript framework, Angular. I personally enjoyed learning Angular because it allowed me to use it moving forward in future projects. Creating components and working with a design system was amazing. The structure of the enterprise was we had a design systems team who create enterprise wide components and patterns. The next level, which is the level I was on, Retail, was the areas of focus teams. We incorporated the design system into our project and if we created a component that other teams needed, we could push the component into the design system where it would be tested and absorbed by the DS. Due to being a bank, we had to focus on accessibility and make sure everything was designed and coded to standard.
   </p>
+
+  <figure class="est-margin-bottom-lg">
+    <img src="/assets/images/truist1.png" alt="truist retail web page image" />
+    <figcaption>Truist Retail</figcaption>
+  </figure>
+
+  <figure class="est-margin-bottom-lg">
+    <img src="/assets/images/truist2.png" alt="truist retail web page image" />
+    <figcaption>Truist Retail</figcaption>
+  </figure>
 </div>
