--- a/projects/workshop/workshop.component.html
+++ b/projects/workshop/workshop.component.html
@@ -4,14 +4,14 @@
   <div class="u-full-width grayscale-hover">
     <h2>2021</h2><hr/>
 
-    <!-- <est-workshop-blurb
-      projectTitle="Established1992 Redesign"
-      projectTag="Design"
-      projectImgSrc="pilot.jpg"
-      projectImgAlt="Pilot Pale Ale Image"
-      projectLink="pilot.html"
+    <est-workshop-blurb
+      projectTitle="FindCenter"
+      projectTag="Product Designer"
+      projectImgSrc="findcenterland.png"
+      projectImgAlt="Find Center Image"
+      projectLink="findcenter"
     >
-    </est-workshop-blurb> -->
+    </est-workshop-blurb>
 
     <est-workshop-blurb
       projectTitle="What Is Cycling"
@@ -38,8 +38,8 @@
     <est-workshop-blurb
       projectTitle="Truist Retail Web"
       projectTag="UI"
-      projectImgSrc="olbScreenshot.jpeg"
-      projectImgAlt="Pilot Pale Ale Image"
+      projectImgSrc="truistland.png"
+      projectImgAlt="Truist Retail Web Image"
       projectLink="truist"
     >
     </est-workshop-blurb>
