--- a/projects/home-page/home-page.component.html
+++ b/projects/home-page/home-page.component.html
@@ -5,13 +5,13 @@
 
 <h3 class="donde-esta">Where are you now?</h3>
 
-<h3>I currently work at <a href="https://www.findcenter.com/" target="_blank">FindCenter</a>, a personal development and growth platform, as a Senior Experience Designer. We have been working hard to create a safe place for individuals to learn and grow. If you would like to learn more about my career or a specific job, feel free to <a href="../../assets/Resume-Elijah-Townsend-2021.pdf" target="_blank" role="button">explore my resume</a>.</h3>
+<h3>I currently work at <a href="https://www.envestnet.com/" target="_blank">Envestnet</a>, retirement software that sets you up to meet your goals in retirement. As a Senior UI/UX Designer, we are implementing new ideas to make your retirement planning smoother. If you would like to learn more about my career or a specific job, feel free to <a href="../../assets/Resume-Elijah-Townsend-2023.pdf" target="_blank" role="button">explore my resume</a>.</h3>
 
 <h4 class="bicicletas">Bicycles</h4>
 
 <img src="../../assets/images/colorado-crit.jpg" alt="elijah racing a crit" class="foto-de-bicicletas">
 
-<h4>Outside of work, my faith, my family and cycling are my main focuses. I use the bike as a mode of transportaion but also as my therapist. The bike is a great way to challenge yourself but also a means to explore in a timely manner. Checkout my cycling project <a href="https://www.whatiscycling.com/" target="_blank">What Is Cycling</a>. This project is a multi episode video series featuring individuals from the cycling community, showcasing the different types of cyclists and reasons for riding that bring us together.</h4>
+<h4>Outside of work, my faith, my family and cycling are my main focuses. I use the bike as a mode of transportaion but also as my therapist. The bike is a great way to challenge yourself but also a means to explore in a timely manner. Checkout my cycling project <a href="https://www.whatiscycling.com/" target="_blank">What Is Cycling</a>. A cycling podcast where I get to interview individuals from all realms of the cycling world to learn about the characteristics that make up their DNA. Ride bikes, share stories!</h4>
 
 <h5 class="contacto">Will Work For Food</h5>
 
